[gd_scene load_steps=2 format=2]

[ext_resource path="res://DataInsert.gd" type="Script" id=1]

[node name="DataInsert" type="Control"]
margin_top = 18.0
margin_right = 500.0
margin_bottom = 518.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_bottom = -18.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.352941, 0.207843, 0.207843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 500.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 19.0
text = "n"

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer"]
margin_left = 12.0
margin_right = 70.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 74.0
margin_top = 5.0
margin_right = 140.0
margin_bottom = 19.0
text = "enunciado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 144.0
margin_right = 445.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 449.0
margin_right = 500.0
margin_bottom = 24.0
text = "a√±adir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
text = "guardar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 36.0
margin_right = 500.0
margin_bottom = 470.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 500.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_save_pressed"]
